--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-    --background: #ffffff;
+    --background: #111111;
     --foreground: #171717;
     --font: "HK Grotesk", sans-serif;
 }
