--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -21,10 +21,6 @@
     font-style: normal;
 }
 
-body {
-    font-family: "hk-grotesk-wide", sans-serif;
-}
-
 @media (prefers-color-scheme: dark) {
     :root {
         --background: #0a0a0a;
@@ -35,4 +31,5 @@ body {
 body {
     color: var(--foreground);
     background: var(--background);
+    font-family: "hk-grotesk-wide" !important;
 }
