--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -33,3 +33,16 @@ body {
     background: var(--background);
     font-family: "hk-grotesk-wide" !important;
 }
+
+.perspective-1000 {
+    perspective: 1000px;
+}
+
+@keyframes rotate3D {
+    from {
+        transform: rotateY(0deg);
+    }
+    to {
+        transform: rotateY(360deg);
+    }
+}
